--- a/src/Components/AboutUs/AboutUsPage/Component/Overview/Overview.module.css
+++ b/src/Components/AboutUs/AboutUsPage/Component/Overview/Overview.module.css
@@ -4,6 +4,7 @@
     gap: 5%;
     padding: 50px;
     text-align: justify;
+    /* border: #F58634 solid 1px; */
     
     }
     .overview__left_box {
