--- a/src/Components/AboutUs/AboutUs.module.css
+++ b/src/Components/AboutUs/AboutUs.module.css
@@ -1,11 +1,22 @@
 
-
-
+.linktext_aboutus{
+    text-decoration: none;
+   color: black;
+    
+}
+.content2p_aboutus{
+    text-align: justify;
+    text-align-last: center;
+    margin-top: 40px;
+    font-size: 16px;
+    /* color: red; */
+    /* font-weight: bold; */
+}
 .container_aboutus{
     display: flex;
     align-items: center;
     width: 100%;
-    height: 667px;
+    height: 600px;
     /* border: #12005A 1px solid; */
     /* margin-top: 130px; */
     /* margin: auto; */
@@ -29,7 +40,7 @@
     align-items: center;
     /* margin-left: 20px; */
     width: 48%;
-    height: 50%;
+    height: 60%;
     /* padding: auto; */
 }
 .imagebox_aboutus{
@@ -61,20 +72,15 @@
 .content2h1_aboutus {
     /* font-weight: bold; */
     margin: 0 auto;
-   
+   /* width: 100%; */
     text-align: center;
     width: 70%;
-    font-size: 2.5rem;
+    font-size: 2.2rem;
     font-weight:600;
     
     margin-top: 20px;
 }
-.content2_aboutus p{
-    text-align: justify;
-    text-align-last: center;
-    margin-top: 40px;
-    font-size: 16px;
-}
+
 .btn_aboutus{
     padding: 10px 40px;
     background-color: white;
@@ -91,6 +97,13 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        height: 100%;
+    }
+    .content2h1_aboutus {
+    width: 70%;
+    text-align: center;
+        font-size: 1.6rem;
+       
     }
     .content2_aboutus{
         /* margin-left: 0px; */
@@ -101,13 +114,17 @@
     
 }
 @media screen and (max-width:720px){
-
+    .container_aboutus{
+       
+        height: 100%;
+    }
     .content2h2_aboutus {
         font-size: 1.25rem;
         font-weight: bold;
     }
     .content2h1_aboutus {
-    
+        text-align: center;
+
         font-size: 1.6rem;
        
     }
@@ -159,4 +176,84 @@
 
     }
 
+    .content2p_aboutus{
+        /* word-break: break-all; */
+        
+        text-align: justify;
+        text-align-last: center;
+        margin-top: 20px;
+        font-size: 16px;
+        /* font-weight: bold; */
+    }
+}
+@media screen and (max-width:461px){
+    .container_aboutus{
+       
+        height: 100%;
+    }
+    .content2h2_aboutus {
+        font-size: 1.25rem;
+        font-weight: bold;
+    }
+    .content2h1_aboutus {
+    /* border: 1px solid red; */
+        font-size: 1.4rem;
+        width: 90%;
+        text-align: center;
+
+       
+    }
+
+    .imagebox_aboutus{
+        position: relative;
+    }
+    .image_aboutus{
+        width: 270px;
+        height: 240px;
+        object-fit: scale-down;
+    }
+    .logo_aboutus{
+        width: 70px;
+        height: 75px;
+        object-fit: contain;
+    }
+    .logo1_aboutus{
+     position: absolute;
+     bottom: -39px;
+     right: 75px;
+    }
+    .logo2_aboutus{
+        position: absolute;
+        bottom: 45px;
+        right: -33px;
+    }
+
+
+    .content2_aboutus{
+        display: flex;
+        flex-direction: column;
+      
+     gap: 5px;
+        width: 90%;
+        height: 83%;
+        
+    }
+
+    .btn_aboutus{
+        padding: 8px 20px;
+    background-color: white;
+    /* box-shadow: 0px 1px #12005A inset; */
+    /* box-shadow: 0px 1px  #12005A; */
+    border: .6px solid #12005A;
+    border-radius: 3px;
+    font-size: 12px;
+    margin-top: 40px;
+
+    }
+
+    .content2p_aboutus{
+        text-align: center;
+        margin-top: 20px;
+        font-size: 16px;
+    }
 }
