--- a/src/Components/AboutUs/AboutUsPage/AboutUsPage.module.css
+++ b/src/Components/AboutUs/AboutUsPage/AboutUsPage.module.css
@@ -1,7 +1,11 @@
 .container_aboutuspage{
     display: flex;
     flex-direction: column;
+    gap: 30px;
     height: 100%;
     width: 100%;
-    margin: 130px auto;
+    margin: 130px auto; 
+    margin-bottom: 100px; 
+    /* border: 1px solid red; */
+    align-items: center;
 }
