--- a/src/Components/AboutUs/AboutUsPage/Component/Team/Team.module.css
+++ b/src/Components/AboutUs/AboutUsPage/Component/Team/Team.module.css
@@ -239,6 +239,7 @@
     .team_respo_body {
         /* min-height: 100vh; */
         display: flex;
+        width: 100%;
         flex-direction: column;
     }
     .team_respo_container {
