--- a/src/Components/Career/Career.module.css
+++ b/src/Components/Career/Career.module.css
@@ -1,8 +1,9 @@
 .container_career{
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 80px;
     margin-top: 100px;
+    margin-bottom: 100px;
     width: 100%;
     height: 100%;
 }
