--- a/src/Components/FAQ/FAQchild.module.css
+++ b/src/Components/FAQ/FAQchild.module.css
@@ -54,8 +54,9 @@
       padding-left: 16px;
       color: #575757;
       width: 90%;
-      text-align: justify;
-      font-size: 11px;
+      text-align: left;
+      font-size: 12px;
+
     }
     .p_faqchild{
       width: 80%;
