--- a/src/Components/Legal/PrivacyPolicy/Privacy.module.css
+++ b/src/Components/Legal/PrivacyPolicy/Privacy.module.css
@@ -1,34 +1,42 @@
+
+
+
+
 .container {
+    margin: 8% auto;
     padding: 20px 40px;
 }
 .heading {
-    text-align: center;
-    padding: 40px 0;
+  padding: 40px 0px;
 }
-.h4, .h5, .h6 {
+ .h3 {
+    margin-bottom: 25px;
     color: #1F3255;
 }
-.h4 {
-    font-size: 20px;
+.lastUpdate {
+    display: inline;
+    border: 1.5px solid #F7A467;
+    padding: 10px 25px;
 }
-.h5, .h6 {
-    font-size: 18px;
-    margin-bottom: 5px;
+.box1, .box2, .box3, .box4, .box5, .box6, .box7, .box8, .box9, .box10, .box11 {
+    margin: 25px 0px;
 }
-.box1, .box3, .box8 {
+.unorderlist {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
 }
-.hr {
-    margin-top: 40px;
-}
-.box2, .box4, .box5, .box6, .box7 {
-    margin: 25px 0;
-}
-.box4 .paras, .box5 .paras, .box6 .paras, .box7 .paras {
-    margin-top: 15px;
-}
-.Privacy_li {
+.list {
     margin-left: 20px;
+}
+.paragraph {
+    margin-top: 10px;
+}
+
+@media screen and (max-width: 340px) {
+    .lastUpdate {
+        display: inline;
+        border: 1.5px solid #F7A467;
+        padding: 0px;
+    }
 }
