--- a/src/Components/StartProject/Component/GenEnquiry/GenEnquiry.module.css
+++ b/src/Components/StartProject/Component/GenEnquiry/GenEnquiry.module.css
@@ -9,6 +9,12 @@
     /* position: absolute;
     top: 100px; */
 }
+
+.gen_errmsg {
+    color: red;
+    font-size: 14px;
+}
+
 .headingdiv_general{
     display: flex;
     flex-direction: column;
@@ -26,6 +32,7 @@
 .form_general{
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 50px;
 
 }
