--- a/src/Components/Testimonial/Testimonial.module.css
+++ b/src/Components/Testimonial/Testimonial.module.css
@@ -1,27 +1,31 @@
 .main_container {
     /* border: 1px dashed red; */
-    height: 470px;
-    width: 100%;
+    height: 500px;
+    width: 1300px;
     display: flex;
     align-items: center;
     gap: 20px;
     flex-direction: column;
+    margin: auto;
 }
 
 .heading {
-    /* margin-top: 30px; */
+    margin-top: 30px;
 }
 .review {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    /* gap: 10px; */
     /* border: 1px saddlebrown solid; */
     justify-content: space-around;
     width: 100%;
     height: 450px;
 }
-@media screen and (max-width:450px) {
+@media screen and (max-width:1288px) {
     .main_container {
        height: 100%; 
+       width: 100%;
     }  
     .review {
         height: 100%;
