--- a/src/Components/caroursel/Services/Component/Ourservices/Ourservices.module.css
+++ b/src/Components/caroursel/Services/Component/Ourservices/Ourservices.module.css
@@ -1,6 +1,7 @@
 .ourservices__main_box {
     height: 500px;
     padding: 0px 50px;
+    margin-bottom: 30px;
     /* margin-top: 180px; */
     /* border: 1px solid pink; */
 }
@@ -52,10 +53,12 @@
 }
 .ourservices__right_box {
     width: 40%;
+    /* height: 105%; */
     height: 100%;
     display: flex;
     flex-direction: column;
     gap: 40px;
+    /* border: 1px solid red; */
 
 }
 
@@ -88,10 +91,11 @@
 
 
 .ourservices__details_content {
-  margin-top: 10px;
+  /* margin-top: 10px; */
+  padding-top: 5px;
   /* text-align: justify; */
   font-size: 14px;
-  width: 90%;
+  width: 95%;
   animation-name: scale;
   animation-duration: 2s;
   animation-direction:alternate;
@@ -169,6 +173,10 @@
        font-weight: 400;
        width: 104%;
     }
+    .ourservices__main_box {
+      height: 100%;
+     
+  }
   }
 
   @media screen and (max-width: 700px) {
@@ -194,6 +202,13 @@
     .ourservices__details_content{
       width: 140%;
     }
+    .ourservices__main_box {
+      /* height: 100%; */
+     
+  }
+
+
+
   }
 
   @media screen and (max-width: 450px) {
@@ -203,12 +218,21 @@
     .ourservices__details_content{
       width: 160%;
     }
+    .ourservices__main_box {
+      /* height: 100%; */
+      margin-bottom: 0px;
+     
+  }
   }
 
   @media screen and (max-width: 370px) {
     .ourservices__main_box {
+     height: 100%;
+      margin-bottom: 0px;
       padding: 10px 30px;
-    }
+    
+  }
+   
     .ourservices__descripation {
       text-align: justify;
     }
