--- a/src/Components/caroursel/Services/Services.module.css
+++ b/src/Components/caroursel/Services/Services.module.css
@@ -6,6 +6,7 @@
    /* border: 1px solid red; */
    /* justify-content: space-evenly; */
 margin-top: 90px;
+margin-bottom: 50px;
 }
 /* @media screen and (max-width:1246px) {
     .component_service{
