--- a/src/Components/caroursel/Services/Component/Learnhow/Learnhow.module.css
+++ b/src/Components/caroursel/Services/Component/Learnhow/Learnhow.module.css
@@ -29,7 +29,8 @@
   } 
   .overlay {
     position: absolute;
-    top: 100px;
+    /* top: 100px; */
+    top: 120px;
     display: flex;
     justify-content: center;
     align-items: center;
